--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,41 +1,23 @@
 <!-- TODO: Loop over each Project and output the name, funding needed, User name, created date and description -->
 <div class="row mb-4 project">
   <div class="col-md-5">
-    <h2>
-      {{{get_emoji}}}
-      <a href="/project/1">Hardcoded Project 1</a>
-    </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- TODO: Pass needed_funding value to the appropriate helper function to format large numbers -->
-      <span class="dollar-amount">5,000</span>
-      needed!
-    </p>
-    <p>Created by Hardcoded User on 01/01/2022</p>
+    <h2><a href="/project/1">Painting</a></h2>
+    <h2><a href="/project/2">Woodworking</a></h2>
+    <h2><a href="/project/3">Plumbing</a></h2>
+    <h2><a href="/project/4">Electrical</a></h2>
+    <h2><a href="/project/5">Botany</a></h2>
   </div>
-  <div class="col-md-7">
-    <p>
-      A hardcoded project description that you should replace with something dynamic
-    </p>
-  </div>
-</div>
-<div class="row mb-4 project">
+ </div>
+
+
+
+{{!-- <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
-      {{{get_emoji}}}
-      <a href="/project/2">Hardcoded Project 2</a>
+      <a href="/project/3">Plumbing</a>
     </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- TODO: Pass needed_funding value to the appropriate helper function to format large numbers -->
-      <span class="dollar-amount">5,000</span>
-      needed!
-    </p>
-    <p>Created by Hardcoded User on 01/01/2022</p>
   </div>
   <div class="col-md-7">
-    <p>
-      A hardcoded project description that you should replace with something dynamic
-    </p>
+
   </div>
-</div>
+</div> --}}
