--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,38 +1,39 @@
 <div class="row">
   <div class="col-auto">
     <!-- TODO: Output the User's name -->
-    <h2>Welcome, Hardcoded User!</h2>
+    <h2>Hey There!</h2>
   </div>
 </div>
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3>What are we fixing today?</h3>
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="project-name">project name:</label>
+        <label for="project-name">Title</label>
         <input class="form-input" type="text" id="project-name" name="project-name" />
       </div>
       <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
-      </div>
-      <div class="form-group">
-        <label for="project-desc">description:</label>
+        <label for="project-desc">Instructions</label>
         <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <label for="project-desc">Select Category to Submit</label><br>
+        <button type="submit" class="btn btn-primary">Painting</button>
+        <button type="submit" class="btn btn-primary">Woodworking</button>
+        <button type="submit" class="btn btn-primary">Plumbing</button>
+        <button type="submit" class="btn btn-primary">Electrical</button>
+        <button type="submit" class="btn btn-primary">Botany</button>
       </div>
     </form>
   </div>
 
   <!-- TODO: Only show this list if the User has Projects -->
-  <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
+  {{!-- <div class="col-md-6 project-list">
+    <h3>Current Projects:</h3> --}}
     <!-- TODO: Loop through and render the User's Projects -->
-    <div class="row mb-2">
+    {{!-- <div class="row mb-2">
       <div class="col-md-8">
         <h4><a href="/project/1">Hardcoded Project 1</a></h4>
       </div>
@@ -49,6 +50,6 @@
       </div>
     </div>
   </div>
-</div>
+</div> --}}
 
 <script src="./js/profile.js"></script>
