--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -2,7 +2,7 @@
   <h2>Plumbing</h2>
   <p>This is the plumbing guide{{body}}</p>
   <ol>
-    <li>How to fix a leaky faucet.</li>
+    <li><a href='project/1/1'>How to fix a leaky faucet.{{{Project.issue}}}</a></li>
     <li>How to unclog a shower drain.</li>
     <li>How to seal a cracked pipe.</li>
     <li>How to stop the roof from leaking.</li>
