--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Re:vamp</title>
+  
+  <!-- ======= StyleSheets ======== -->
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
+
+  <!-- ======= Google fonts ======== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,600;0,700;1,100;1,200;1,600;1,700&display=swap" rel="stylesheet">
+  
 </head>
 
 <body>
