--- a/views/woodworking.handlebars
+++ b/views/woodworking.handlebars
@@ -1,8 +1,8 @@
 <!-- TODO: Display the Project details -->
-  <h2>Plumbing</h2>
-  <p>This is the plumbing guide{{body}}</p>
+  <h2>Woodworking</h2>
+  <p>Knock, knock</p>
   <ol>
-    <li><a href='project/1/1'>How to fix a leaky faucet.{{{Project.issue}}}</a></li>
+    <li><a href='project/1/1'>How to fix a leaky faucet.{{issue}}</a></li>
     <li>How to unclog a shower drain.</li>
     <li>How to seal a cracked pipe.</li>
     <li>How to stop the roof from leaking.</li>
