--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,6 +6,7 @@
     <h2><a href="/project/3">Plumbing</a></h2>
     <h2><a href="/project/4">Electrical</a></h2>
     <h2><a href="/project/5">Botany</a></h2>
+    {{!-- <test link>--}} </test><h2><a href="/project/s">Summarycard</a></h2> 
   </div>
  </div>
 
