--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: poppins,sans-serif;
+}
+
 header, .project:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
@@ -21,4 +25,12 @@ header, .project:not(:last-child) {
   color: #056605;
   font-weight: bold;
   margin-left: -5px;
+}
+
+nav {
+  display: inline;
+}
+
+.topImage {
+  margin: auto;
 }
