--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,11 @@
 <!-- TODO: Loop over each Project and output the name, funding needed, User name, created date and description -->
 <div class="row mb-4 project">
   <div class="col-md-5">
-    <h2><a href="/project/1">Painting</a></h2>
-    <h2><a href="/project/2">Woodworking</a></h2>
-    <h2><a href="/project/3">Plumbing</a></h2>
-    <h2><a href="/project/4">Electrical</a></h2>
-    <h2><a href="/project/5">Botany</a></h2>
+    <h2><a href="/project/painting">Painting</a></h2>
+    <h2><a href="/project/woodworking">Woodworking</a></h2>
+    <h2><a href="/project/plumbing">Plumbing</a></h2>
+    <h2><a href="/project/electrical">Electrical</a></h2>
+    <h2><a href="/project/botany">Botany</a></h2>
     {{!-- <test link>--}} </test><h2><a href="/project/s">Summarycard</a></h2> 
   </div>
  </div>
