--- a/views/plumbing.handlebars
+++ b/views/plumbing.handlebars
@@ -1,21 +1,15 @@
 <!-- TODO: Display the Project details -->
   <h2>Plumbing</h2>
   <p>Go with the flow</p>
-  <p>{{summarycard}}</p>
-  <ol>
+  
+  <ul>
     {{#each projects as |project|}}
+    <img src="{{img_URL}}">Image</img>
     <li>{{project.issue}}</li>
+    <div>{{{project.instructions}}}</div><br>
+    <div>Difficulty: {{project.difficulty}}</div><br><br>
     {{/each}}
-    <li><a href='project/1/1'>How to fix a leaky faucet.{{issue}}</a></li>
-      <p>{{instructions}}</p>
-      <img href="{{img_URL}}">Image</img>
-      <p>{{difficulty}}</p>
-      <p>{{category}}</p>
-
-    <li>How to unclog a shower drain.</li>
-    <li>How to seal a cracked pipe.</li>
-    <li>How to stop the roof from leaking.</li>
-  </ol>
+  </ul>
 
   {{#if logged_in}}
   <body>
