--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
     <h2><a href="/project/plumbing">Plumbing</a></h2>
     <h2><a href="/project/electrical">Electrical</a></h2>
     <h2><a href="/project/botany">Botany</a></h2>
-    {{!-- <test link>--}} </test><h2><a href="/project/s">Summarycard</a></h2> 
+    {{!-- <h2><a href="/project/s">Summarycard</a></h2>  --}}
   </div>
  </div>
 
