--- a/views/botany.handlebars
+++ b/views/botany.handlebars
@@ -1,14 +1,15 @@
 <!-- TODO: Display the Project details -->
   <h2>Botany</h2>
   <p>Going Green</p>
-  <p>{{{dataValue.instructions}}}</p>
-  <ol>
-    <li><a href='project/1/1'>How to fix a leaky faucet.{{dataValues.issue}}</a></li>
-    <li>How to unclog a shower drain.</li>
-    <li>How to seal a cracked pipe.</li>
-    <li>How to stop the roof from leaking.</li>
-  </ol>
-</div>
+  
+<ul>
+    {{#each projects as |project|}}
+    <img src="{{img_URL}}">Image</img>
+    <li>{{project.issue}}</li>
+    <div>{{{project.instructions}}}</div><br>
+    <div>Difficulty: {{project.difficulty}}</div><br><br>
+    {{/each}}
+  </ul>
 
   {{#if logged_in}}
   <body>
