--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,25 +6,76 @@
 </div>
 
 <div class="row mt-4">
-  <div class="col-md-6">
+  <div class="col-md-12">
     <h3>What are we fixing today?</h3>
 
     <form class="form new-project-form">
       <div class="form-group">
         <label for="project-name">Title</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <input class="form-input" type="text" id="project-issue" name="project-name" />
       </div>
       <div class="form-group">
         <label for="project-desc">Instructions</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
+        <textarea class="form-input" id="project-instructions" name="project-desc"></textarea>
       </div>
       <div class="form-group">
-        <label for="project-desc">Select Category to Submit</label><br>
-        <button type="submit" class="btn btn-primary">Painting</button>
-        <button type="submit" class="btn btn-primary">Woodworking</button>
-        <button type="submit" class="btn btn-primary">Plumbing</button>
-        <button type="submit" class="btn btn-primary">Electrical</button>
-        <button type="submit" class="btn btn-primary">Botany</button>
+
+        
+        <label  class="p-3 pl-0">Select Difficulty Level</label><br>
+
+       <div class="form-check p-1">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+  <label class="form-check-label" for="flexRadioDefault1">
+    Easy
+  </label>
+</div>
+<div class="form-check p-1">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
+  <label class="form-check-label" for="flexRadioDefault2">
+    Medium
+  </label>
+</div>
+<div class="form-check p-1">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" >
+  <label class="form-check-label" for="flexRadioDefault3">
+    Hard
+  </label>
+</div>
+
+
+        <label for="project-desc" class="p-3 pl-0">Select Category</label><br>
+
+        <div id="category-radio-btn " class="btn-group pb-3" role="group" aria-label="Basic radio toggle button group">
+  <input type="radio" class="btn-check m-5" name="btnradio" id="btnradio1" autocomplete="off">
+  <label class="btn btn-info" for="btnradio1">Painting</label>
+
+  <input type="radio" class="btn-check m-5" name="btnradio" id="btnradio2" autocomplete="off">
+  <label class="btn btn-info" for="btnradio2">Woodworking</label>
+
+  <input type="radio" class="btn-check m-5" name="btnradio" id="btnradio3" autocomplete="off">
+  <label class="btn btn-info" for="btnradio3">Plumbing</label>
+
+  <input type="radio" class="btn-check m-5" name="btnradio" id="btnradio4" autocomplete="off">
+  <label class="btn btn-info " for="btnradio4">Electrical</label>
+
+  <input type="radio" class="btn-check m-5" name="btnradio" id="btnradio5" autocomplete="off">
+  <label class="btn btn-info" for="btnradio5">Botany</label>
+</div>
+
+
+<div class="container w-100">
+  <div class="row justify-content-center">
+    
+      <button id="submit-btn" type="submit" class="btn btn-primary p-5" >Submit Your Tutorial Now!</button>
+    
+    
+  </div>
+</div>
+       
+        {{!-- <button type="submit" class="btn btn-primary" data-cat="Woodworking">Woodworking</button>
+        <button type="submit" class="btn btn-primary" data-cat="Plumbing">Plumbing</button>
+        <button type="submit" class="btn btn-primary" data-cat="Electrical">Electrical</button>
+        <button type="submit" class="btn btn-primary" data-cat="Botany">Botany</button> --}}
       </div>
     </form>
   </div>
@@ -53,3 +104,4 @@
 </div> --}}
 
 <script src="./js/profile.js"></script>
+<script src="./js/add-project.js"></script>
