updated-post-route

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -23,7 +23,7 @@
         
         <label  class="p-3 pl-0">Select Difficulty Level</label><br>
 
-       <div class="form-check p-1">
+       <div id="diff-radio-btn" class="form-check p-1">
   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
   <label class="form-check-label" for="flexRadioDefault1">
     Easy
@@ -71,6 +71,8 @@
     
   </div>
 </div>
+
+<span id="results"></span>
        
         {{!-- <button type="submit" class="btn btn-primary" data-cat="Woodworking">Woodworking</button>
         <button type="submit" class="btn btn-primary" data-cat="Plumbing">Plumbing</button>
