--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RE:vamp - Make stuff better </title>
-    <link rel="shortcut icon" href="/public/assets/images/fav.png" type="image/x-icon">  
+    <link rel="shortcut icon" href="/assets/images/fav.png" type="image/x-icon">  
 
         <!-- ======= StyleSheets ======== -->
-    <link rel="stylesheet" href="/public/css/reset.css">
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/public/assets/css/styleHeader.css">
+    <link rel="stylesheet" href="/assets/css/styleHeader.css">
     <link rel="stylesheet" href="/css/jass.css">
 
         <!-- ======= Google fonts ======== -->
@@ -21,22 +21,22 @@
 </head>
 <body>
     <header>
-        <img class="topImage" src="public/assets/images/placeholder.png" width="680px"></img>
+        <img class="topImage" src="/assets/images/placeholder.png" width="680px"></img>
         <ul class="nav justify-content-center">
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Electrical</a>
+                <a class="nav-link" href="/project/electrical">Electrical</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Wood Working</a>
+                <a class="nav-link" href="/project/woodworking">Wood Working</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Botany</a>
+                <a class="nav-link" href="/project/botany">Botany</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Painting</a>
+                <a class="nav-link" href="/project/painting">Painting</a>
             </li>
             {{#if logged_in}}
             <li class="nav-link"> 
