--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -105,5 +105,5 @@
   </div>
 </div> --}}
 
-<script src="./js/profile.js"></script>
-<script src="./js/add-project.js"></script>
+<script src="/js/profile.js"></script>
+<script src="/js/add-project.js"></script>
