--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/styleHeader.css">
+    <link rel="stylesheet" href="/css/styleHeader.css">
     <link rel="stylesheet" href="/css/jass.css">
 
         <!-- ======= Google fonts ======== -->
@@ -22,31 +22,39 @@
 <body>
     <header>
         <img class="topImage" src="/assets/images/placeholder.png" width="680px"></img>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Electrical</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Wood Working</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/project/botany">Botany</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/project/painting">Painting</a>
-            </li>
+            <div id="menubox">
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/project/electrical">Electrical</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/project/woodworking">Woodworking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/project/botany">Botany</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/project/painting">Painting</a>
+                    </li>
 
-            {{#if logged_in}}
-            <a href="/profile">profile</a> |
-            <button class="no-button" id="logout">logout</button>
-            {{else}}
-            <a href="/login">login</a>
-            {{/if}}
-            
-        </ul>
+                    {{#if logged_in}}
+                    <li class="nav-item">
+                        <a href="/profile">profile</a>
+                    </li>
+                    <li class="nav-item">
+                    <button class="no-button" id="logout">logout</button>
+                    </li>
+                    {{else}}
+                    <li class="nav-item">
+                        <a href="/login">login</a>
+                    </li>
+                    {{/if}}
+                    
+                </ul>
+            </div>
 
     </header>
     <!-- ============================ -->
