--- a/views/woodworking.handlebars
+++ b/views/woodworking.handlebars
@@ -4,7 +4,7 @@
   
   <ul>
     {{#each projects as |project|}}
-    <img src="{{img_URL}}">Image</img>
+    <img src="{{img_URL}}" width="300"></img>
     <li>{{project.issue}}</li>
     <div>{{{project.instructions}}}</div><br>
     <div>Difficulty: {{project.difficulty}}</div><br><br>
@@ -13,7 +13,6 @@
 
   {{#if logged_in}}
   <body>
-  {{!-- {{#if 'project/2'}} --}}
   <p><a href='/project/1/add_tip'>add your tip here!</a></p>
   </body>
   <script src="/js/logout.js"></script>
