--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,24 +1,22 @@
 <!-- TODO: Loop over each Project and output the name, funding needed, User name, created date and description -->
 <div class="row mb-4 project">
   <div class="col-md-5">
-    <h2><a href="/project/painting">Painting</a></h2>
+    {{!-- <h2><a href="/project/painting">Painting</a></h2>
     <h2><a href="/project/woodworking">Woodworking</a></h2>
     <h2><a href="/project/plumbing">Plumbing</a></h2>
     <h2><a href="/project/electrical">Electrical</a></h2>
-    <h2><a href="/project/botany">Botany</a></h2>
+    <h2><a href="/project/botany">Botany</a></h2> --}}
     {{!-- <h2><a href="/project/s">Summarycard</a></h2>  --}}
-  </div>
- </div>
+    <h3>Welcome to REvamp</h3>
+    <br>
+    <p>Traditional capitalism has done a spectacular job of convincing us that once something's broken, it's time to buy something new to replace it.<br><br>
+
+REvamp’s mission is to create a highly shareable way to connect our community of fixers with new ways to repair, rebuild and improve everyday things in their lives.<br>
 
 
-
-{{!-- <div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <a href="/project/3">Plumbing</a>
-    </h2>
-  </div>
-  <div class="col-md-7">
+Why throw it out when you can fix it? 
+And how can I make something better?
+</p>
 
   </div>
-</div> --}}
+</div>
