--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="/project/electrical">Electrical</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/project/plumbing">Plumbing</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/project/woodworking">Woodworking</a>
                     </li>
                     <li class="nav-item">
@@ -59,7 +62,7 @@
     </header>
     <!-- ============================ -->
 
-<div class="justify-content-center">
+<div width="900px">
                 {{{ body }}}
 </div>
 
