--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -24,19 +24,19 @@
         <label  class="p-3 pl-0">Select Difficulty Level</label><br>
 
        <div id="diff-radio-btn" class="form-check p-1">
-  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="Easy" >
+  <input class="form-check-input" type="radio" name="levelRadio" id="flexRadioDefault1" value="Easy" >
   <label class="form-check-label" for="flexRadioDefault1">
     Easy
   </label>
 </div>
 <div class="form-check p-1">
-  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="Medium" >
+  <input class="form-check-input" type="radio" name="levelRadio" id="flexRadioDefault2" value="Medium" >
   <label class="form-check-label" for="flexRadioDefault2">
     Medium
   </label>
 </div>
 <div class="form-check p-1">
-  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" value="Hard" checked >
+  <input class="form-check-input" type="radio" name="levelRadio" id="flexRadioDefault3" value="Hard" checked >
   <label class="form-check-label" for="flexRadioDefault3">
     Hard
   </label>
@@ -46,19 +46,19 @@
         <label for="project-desc" class="p-3 pl-0">Select Category</label><br>
 
         <div id="category-radio-btn " class="btn-group pb-3" role="group" aria-label="Basic radio toggle button group">
-  <input type="radio" class="btn-check m-5" name="btnradio" id="btnradio1" autocomplete="off" value="Painting">
+  <input type="radio" class="btn-check m-5" name="categoryRadio" id="btnradio1" autocomplete="off" value="Painting">
   <label class="btn btn-info" for="btnradio1" >Painting</label>
 
-  <input type="radio" class="btn-check m-5" name="btnradio" id="btnradio2" autocomplete="off" value="Woodworking">
+  <input type="radio" class="btn-check m-5" name="categoryRadio" id="btnradio2" autocomplete="off" value="Woodworking">
   <label class="btn btn-info" for="btnradio2">Woodworking</label>
 
-  <input type="radio" class="btn-check m-5" name="btnradio" id="btnradio3" autocomplete="off" value="Plumbing">
+  <input type="radio" class="btn-check m-5" name="categoryRadio" id="btnradio3" autocomplete="off" value="Plumbing">
   <label class="btn btn-info" for="btnradio3">Plumbing</label>
 
-  <input type="radio" class="btn-check m-5" name="btnradio" id="btnradio4" autocomplete="off" value="Electrical">
+  <input type="radio" class="btn-check m-5" name="categoryRadio" id="btnradio4" autocomplete="off" value="Electrical">
   <label class="btn btn-info " for="btnradio4">Electrical</label>
 
-  <input type="radio" class="btn-check m-5" name="btnradio" id="btnradio5" autocomplete="off" value="Botany">
+  <input type="radio" class="btn-check m-5" name="categoryRadio" id="btnradio5" autocomplete="off" value="Botany">
   <label class="btn btn-info" for="btnradio5">Botany</label>
 </div>
 
