added-multiple-spans-for-error-messages-in-form-validation-and-implemented-validation-checks-for-required-fields

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -13,16 +13,19 @@
       <div class="form-group">
         <label for="project-name">Title</label>
         <input class="form-input" type="text" id="project-issue" name="project-name"  />
+        <span id="title-error"></span>
       </div>
       <div class="form-group">
         <label for="project-desc">Instructions</label>
         <textarea class="form-input" id="project-instructions" name="project-desc" ></textarea>
+        <span id="steps-error"></span>
       </div>
       <div class="form-group">
 
         <div class="form-group">
         <label for="project-img">Image URL</label>
         <input class="form-input" type="text" id="project-img" name="project-img"  />
+        <span id="img-error"></span>
       </div>
 
         <label  class="p-3 pl-0">Select Difficulty Level</label><br>
