reset-form-after-adding-project

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,7 +9,7 @@
   <div class="col-md-12">
     <h3>What are we fixing today?</h3>
 
-    <form class="form new-project-form">
+    <form id="add-project-form" class="form new-project-form">
       <div class="form-group">
         <label for="project-name">Title</label>
         <input class="form-input" type="text" id="project-issue" name="project-name"  />
