--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,10 +9,11 @@
 
         <!-- ======= StyleSheets ======== -->
     <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/jass.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styleHeader.css">
-    <link rel="stylesheet" href="/css/jass.css">
+
 
         <!-- ======= Google fonts ======== -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,8 +22,8 @@
 </head>
 <body>
     <header>
-        <img class="topImage" src="/assets/images/placeholder.png" width="680px"></img>
-            <div id="menubox">
+        <img class="topImage" src="/assets/images/placeholder.png" width="500px"></img>
+            <div id="menuBox">
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
@@ -45,14 +46,14 @@
 
                     {{#if logged_in}}
                     <li class="nav-item">
-                        <a href="/profile">profile</a>
+                        <a class="nav-link" href="/profile">profile</a>
                     </li>
                     <li class="nav-item">
-                    <button class="no-button" id="logout">logout</button>
+                    <button class="nav-link no-button" id="logout">logout</button>
                     </li>
                     {{else}}
                     <li class="nav-item">
-                        <a href="/login">login</a>
+                        <a class="nav-link" href="/login">login</a>
                     </li>
                     {{/if}}
                     
@@ -62,13 +63,13 @@
     </header>
     <!-- ============================ -->
 
-<div width="900px">
+<div id="mainPanel">
                 {{{ body }}}
 </div>
 
     <!-- ============================ -->
-    <footer class="justify-content-center">
-        <div class="justify-content-center">
+    <footer>
+        <div>
             <p>
                 We acknowledge the Traditional Owners and Custodians of the lands on which we work <br> and pay our respects to Indigenous Elders past, present and emerging.
             </p>
