--- a/views/painting.handlebars
+++ b/views/painting.handlebars
@@ -1,21 +1,34 @@
 <!-- TODO: Display the Project details -->
+<div id="projectHead">
   <h2>Painting</h2>
   <p>Add colour and spice</p>
+  <br>
+  <p>Don't lose your cool! <br>
+  Try these fun painting projects today!</p>
+  </div>
+  
+  {{#each projects as |project|}}
+  <div id="projectBox">
+    <ul>
+      <br>
+      <li><h3>{{project.issue}}</h3></li>
+      <br>
+      <img src="{{img_URL}}" width="250px"></img>
+      <div>{{{project.instructions}}}</div><br>
+      <div>Difficulty: {{project.difficulty}}</div><br><br>
+    </ul>
+    <img src="/assets/images/user.png" width="50px"></img>
+    <p>Tip added by: Billy Bob</p>
+  </div>
 
-<ul>
-    {{#each projects as |project|}}
-    <img src="{{img_URL}}" width="300"></img>
-    <li>{{project.issue}}</li>
-    <div>{{{project.instructions}}}</div><br>
-    <div>Difficulty: {{project.difficulty}}</div><br><br>
-    {{/each}}
-  </ul>
+  {{/each}}
 
   {{#if logged_in}}
-  <body>
-  <p><a href='/project/1/add_tip'>add your tip here!</a></p>
-  </body>
+  <div>
+  <p><a href='/addUserTip'>Add your tip here!</a></p>
+  </div>
   <script src="/js/logout.js"></script>
   {{/if}}
+
 
 
