tweeked images on the homepage

--- a/views/woodworking.handlebars
+++ b/views/woodworking.handlebars
@@ -15,7 +15,7 @@
       <br>
       <li><h3>{{project.issue}}</h3></li>
       <br>
-      <img src="{{img_URL}}" width="250px"></img>
+      <img id="projectPic" src="{{img_URL}}" width="250px"></img>
       <div>{{{project.instructions}}}</div><br>
       <div>Difficulty: {{project.difficulty}}</div><br><br>
     </ul>
