--- a/public/css/styleHeader.css
+++ b/public/css/styleHeader.css
@@ -1,6 +1,4 @@
-/* CSS Specific to the header */
 
-/* ======== Header ======== */
 header {
     max-width: 960px;
     text-decoration: none;
@@ -16,8 +14,33 @@ header {
     
 }
 
-img {
-    border-radius: 25px;
+#pic1 {
+    border-radius: 10px;
+    box-shadow: 0px 5px 5px 5px rgba(0,0,0,0.2);
+    position: relative;
+    left: 20px;
+    top: 30px;
+}
+
+#pic2 {
+    border-radius: 10px;
+    box-shadow: 0px 5px 5px 5px rgba(0,0,0,0.2);
+    position: relative;
+    left: 90px;
+}
+
+#pic3 {
+    border-radius: 10px;
+    box-shadow: 0px 5px 5px 5px rgba(0,0,0,0.2);
+    position: relative;
+    left: 70px;
+    top: -20px;
+}
+
+#projectPic {
+    border-radius: 25px 0px 25x 0px;
+    margin-bottom: 25px;
+    box-shadow: 5px 15px 15px 5px rgba(0,0,0,0.2);
 }
 
 #projectBox {
@@ -28,9 +51,6 @@ img {
     box-shadow: 0px 15px 17px 7px rgba(0,0,0,0.2);
 }
 
-
-
-/* ======== Top section header ======== */
 .menuBox {
     line-height: 2.5;
     color: white;
@@ -48,11 +68,10 @@ img {
 }
 
 
-
-/* ======== Top section header ======== */
 #menuBox {
     max-width: 960px;
     font-weight: 700;
+    color: white;
     background: rgb(5, 0, 105);
     background: linear-gradient(90deg, rgb(199, 196, 255) 0%, rgb(108, 148, 223) 35%, rgb(62, 168, 189) 100%);
     }
@@ -66,12 +85,8 @@ img {
 }
 
 
-/* ======== Bottom section header ======== */
-
-
 h2 {
     font-size: 2rem;
-    color: var(--lightText);
     font-weight: 600;
     line-height: 1.5;
     margin-right: 30px;
