--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <!-- TODO: Loop over each Project and output the name, funding needed, User name, created date and description -->
 <div class="row mb-4 project">
-  <div class="col-md-5">
+  <div class="col-md-5" id="homepageText">
     <h3>Welcome to REvamp</h3>
     <br>
     <p>Traditional capitalism has done a spectacular job of convincing us that once something's broken, it's time to buy something new to replace it.
