--- a/public/css/styleHeader.css
+++ b/public/css/styleHeader.css
@@ -4,7 +4,7 @@ header {
     text-decoration: none;
     height: 300px;
     padding-top: 30px;
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(26, 26, 26);
     background-size: cover;
     background-position: center;
     margin: auto;
@@ -15,7 +15,7 @@ header {
 }
 
 #pic1 {
-    border-radius: 10px;
+    border-radius: 30px 5px 5px 5px;
     box-shadow: 0px 5px 5px 5px rgba(0,0,0,0.2);
     position: relative;
     left: 20px;
@@ -23,24 +23,25 @@ header {
 }
 
 #pic2 {
-    border-radius: 10px;
+    border-radius: 5px 30px 5px 5px;
     box-shadow: 0px 5px 5px 5px rgba(0,0,0,0.2);
     position: relative;
     left: 90px;
 }
 
 #pic3 {
-    border-radius: 10px;
+    border-radius: 5px 5px 30px 5px;
     box-shadow: 0px 5px 5px 5px rgba(0,0,0,0.2);
     position: relative;
-    left: 70px;
-    top: -20px;
+    left: 40px;
+    top: -30px;
 }
 
 #projectPic {
-    border-radius: 25px 0px 25x 0px;
+    border-radius: 25px 5px 25px 5px;
     margin-bottom: 25px;
     box-shadow: 5px 15px 15px 5px rgba(0,0,0,0.2);
+    width: 500px;
 }
 
 #projectBox {
@@ -66,30 +67,42 @@ header {
     margin-right: 30px;
     margin-left: 30px;;
 }
-
+.project {
+    justify-content: space-around;
+}
 
 #menuBox {
     max-width: 960px;
     font-weight: 700;
     color: white;
     background: rgb(5, 0, 105);
-    background: linear-gradient(90deg, rgb(199, 196, 255) 0%, rgb(108, 148, 223) 35%, rgb(62, 168, 189) 100%);
+    background: linear-gradient(90deg, rgb(31, 31, 31) 0%, rgb(75, 75, 75) 35%, rgb(83, 83, 83) 100%);
     }
 
 #mainPanel {
     max-width: 960px;
     margin: auto;
     padding: 20px;
-    background-color: rgb(210, 220, 255);
+    background-color: rgb(214, 214, 214);
     box-shadow: inset 0px 5px 15px rgba(0,0,0,0.2);
 }
 
+#homepageText {
+    text-align: justify;
+    margin-top: 50px;
+}
 
 h2 {
     font-size: 2rem;
     font-weight: 600;
     line-height: 1.5;
     margin-right: 30px;
+}
+
+a.nav-link {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    text-shadow: 4px 2px 4px #0000005b;
 }
 
 li {
