updated-error-messages-colors

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -13,19 +13,19 @@
       <div class="form-group">
         <label for="project-name">Title</label>
         <input class="form-input" type="text" id="project-issue" name="project-name"  />
-        <span id="title-error"></span>
+        <span id="title-error" class="text-danger h3"></span>
       </div>
       <div class="form-group">
         <label for="project-desc">Instructions</label>
         <textarea class="form-input" id="project-instructions" name="project-desc" ></textarea>
-        <span id="steps-error"></span>
+        <span id="steps-error" class="text-danger h3"></span>
       </div>
       <div class="form-group">
 
         <div class="form-group">
         <label for="project-img">Image URL</label>
         <input class="form-input" type="text" id="project-img" name="project-img"  />
-        <span id="img-error"></span>
+        <span id="img-error" class="text-danger h3"></span>
       </div>
 
         <label  class="p-3 pl-0">Select Difficulty Level</label><br>
@@ -79,7 +79,7 @@
   </div>
 </div>
 
-<span id="results"></span>
+<span id="results" class="display-1 text-info"></span>
        
         {{!-- <button type="submit" class="btn btn-primary" data-cat="Woodworking">Woodworking</button>
         <button type="submit" class="btn btn-primary" data-cat="Plumbing">Plumbing</button>
